// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Touchable renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-4s20uj {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  opacity: 0.5;
}

<button
    class="cache-4s20uj e7ah3bn0"
    disabled=""
    type="button"
  >
    Basic Touchable
  </button>
</DocumentFragment>
`;

exports[`Touchable renders correctly on focus 1`] = `
<DocumentFragment>
  .cache-1qpufvt {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1qpufvt:active {
  opacity: 0.7;
}

<button
    class="cache-1qpufvt e7ah3bn0"
    tabindex="0"
    type="button"
  >
    Basic Touchable
  </button>
</DocumentFragment>
`;

exports[`Touchable renders correctly with a non default as and type 1`] = `
<DocumentFragment>
  .cache-12xt7c8 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
}

<div
    class="cache-12xt7c8 e7ah3bn0"
    type="button"
  >
    Button Touchable
  </div>
</DocumentFragment>
`;

exports[`Touchable renders correctly with defaults 1`] = `
<DocumentFragment>
  .cache-12xt7c8 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
}

<button
    class="cache-12xt7c8 e7ah3bn0"
    type="button"
  >
    Basic Touchable
  </button>
</DocumentFragment>
`;
